--- a/config/database.yml
+++ b/config/database.yml
@@ -19,14 +19,20 @@ default: &default
   encoding: unicode
   # For details on connection pooling, see Rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  pool: 5
   user: postgres
   password: password
   host: localhost
 
 development:
   <<: *default
-  database: example_development
+  database: grupo37_development
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
+  username: postgres
+  password: password
+  host: localhost
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -60,7 +66,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: example_test
+  database: grupo37_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -83,6 +89,6 @@ test:
 #
 production:
   <<: *default
-  database: example_production
+  database: grupo37_production
   username: example
   password: <%= ENV['EXAMPLE_DATABASE_PASSWORD'] %>
