Primer commit de nueva version, CRUD Post

--- a/config/database.yml
+++ b/config/database.yml
@@ -19,26 +19,20 @@ default: &default
   encoding: unicode
   # For details on connection pooling, see Rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
-  pool: 5
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   user: postgres
   password: password
   host: localhost
 
 development:
   <<: *default
-  database: grupo37_development
-  adapter: postgresql
-  encoding: unicode
-  pool: 5
-  username: postgres
-  password: password
-  host: localhost
+  database: g37_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: example
+  #username: grupo-37
 
   # The password associated with the postgres role (username).
   #password:
@@ -66,7 +60,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: grupo37_test
+  database: g37_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -89,6 +83,4 @@ test:
 #
 production:
   <<: *default
-  database: grupo37_production
-  username: example
-  password: <%= ENV['EXAMPLE_DATABASE_PASSWORD'] %>
+  database: g37_production
