--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  nombre: MyString
-  email: MyString
+  title: MyString
+  content: MyText
 
 two:
-  nombre: MyString
-  email: MyString
+  title: MyString
+  content: MyText
