--- a/config/database.yml
+++ b/config/database.yml
@@ -35,7 +35,7 @@ development:
   #username: grupo-37
 
   # The password associated with the postgres role (username).
-  #password:
+  #password: password
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
